@@ -24,7 +24,9 @@ import java.util.concurrent.ThreadLocalRandom;
 import org.junit.Test;
 
 import junit.framework.Assert;
+import org.apache.cassandra.db.marshal.AbstractType;
 import org.apache.cassandra.db.marshal.BytesType;
+import org.apache.cassandra.db.marshal.UTF8Type;
 import org.apache.cassandra.utils.ByteBufferUtil;
 import static org.junit.Assert.assertEquals;
 
@@ -75,6 +77,28 @@ public class ColumnIdentifierTest
         assertEquals("\"4b\"", ColumnIdentifier.maybeQuote("4b"));
         assertEquals("\"\"\"\"", ColumnIdentifier.maybeQuote("\""));
         assertEquals("\"\"\"a\"\"b\"\"\"", ColumnIdentifier.maybeQuote("\"a\"b\""));
+    }
+
+    @Test
+    public void testInternedCache()
+    {
+        AbstractType<?> utf8Type = UTF8Type.instance;
+        AbstractType<?> bytesType = BytesType.instance;
+
+        byte[] bytes = new byte [] { 0x63, (byte) 0x32 };
+        String text = "c2"; // the UTF-8 encoding of this string is the same as bytes, 0x630x32
+
+        ColumnIdentifier c1 = ColumnIdentifier.getInterned(ByteBuffer.wrap(bytes), bytesType);
+        ColumnIdentifier c2 = ColumnIdentifier.getInterned(utf8Type, utf8Type.fromString(text), text);
+        ColumnIdentifier c3 = ColumnIdentifier.getInterned(text, true);
+
+        Assert.assertTrue(c1.isInterned());
+        Assert.assertTrue(c2.isInterned());
+        Assert.assertTrue(c3.isInterned());
+
+        Assert.assertEquals("6332", c1.toString());
+        Assert.assertEquals(text, c2.toString());
+        Assert.assertEquals(text, c3.toString());
     }
 
 }
